k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: student-f-ettinger
  labels:
    component: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - containerPort: 5432
              protocol: TCP
              name: postgres
          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: setup-scripts
              mountPath: /docker-entrypoint-initdb.d/setup.sql
              subPath: setup.sql
              readOnly: true
            - name: allowall
              mountPath: /docker-entrypoint-initdb.d/allow-all.sh
              subPath: allow-all.sh
              readOnly: true
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgresql-data
        - name: setup-scripts
          configMap:
            name: postgres-setup
            items:
              - key: setup.sql
                path: setup.sql
        - name: allowall
          configMap:
            name: postgres-setup
            items:
              - key: allow-all.sh
                path: allow-all.sh
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: student-f-ettinger
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    component: postgres
