k8s/ingress.yaml
# Allow access from the internet
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: student-f-ettinger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /m.pouget/(api/quiz-game-websocket.*)
            pathType: Prefix
            backend:
              service:
                name: quarkus
                port:
                  number: 8080
          - path: /m.pouget
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /m.pouget/(.*)$
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
